--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Testing</title>
+	<title>Docs United</title>
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
@@ -13,49 +13,76 @@
 
 <div class="grid">
 	<header></header>
+
+	<!-- Billboard -->
+
 	<div class="row">
 		<div class="col-1-1 center-block grey-dk pad-md">
-			<h4>Copy here</h4>
+			<p>Filling the needs of both facilities and physicians with the right fit, in the right place, at the right time.</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-1-2 bb-block grey-md pad-lg float-right bb-bg bb-home01"></div>
-		<div class="col-1-2 bb-block grey-lt pad-lg">
-			<ul>
-				<li>Something</li>
-				<li>Something else</li>
-				<li>I am a bullet</li>
-				<li>... and I am a worm</li>
-			</ul>
-			<a href="#" class="link">Click Here <i class="fa fa-caret-right"></i></a>
+		<div class="col-1-2 grey-lt pad-lg mob-order2">
+			<h2>Our Mission</h2>
+			<p>Docs United aims to pair top-quality, highly-skilled medical professionals with facilities and clinics in need of temporary or long-term medical staffing.</p>
+			<p>A physician-owned company, Docs United is trusted by fellow physicians and facilities alike, with our team knowing what matters most from both perspectives. Often staffing within the same facilities in which they practice, Docs United uses a thorough screening process to provide the perfect fit at just the right time.</p>
 		</div>
+		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home01 mob-order1"></div>
 	</div>
-	<div class="row">
-		<div class="col-1-1 center-block grey-dk pad-md">
-			<p>More copy here</p>
-		</div>
-	</div>
+
+	<!-- Button Section -->
+
 	<div class="row">
 		<div class="col-1-2 center-block pad-md">
-			<a href="#" class="button">Button Here</a>
+			<a href="#" class="button">Facility Application</a>
 		</div>
 		<div class="col-1-2 center-block pad-md grey-md">
-			<a href="#" class="button">Button Here</a>
+			<a href="#" class="button">Physician Application</a>
 		</div>
 	</div>
+
+	<!-- Content Section -->
+
 	<div class="row">
-		<div class="col-1-2 bb-block grey-md pad-lg bb-bg bb-home02"></div>
-		<div class="col-1-2 bb-block grey-lt pad-lg">
+		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02"></div>
+		<div class="col-1-2 min-height grey-lt pad-lg">
+			<h2>Why Docs United?</h2>
 			<ul>
-				<li>Something</li>
-				<li>Something else</li>
-				<li>I am a bullet</li>
-				<li>... and I am a worm</li>
+				<li>First-class service and communication in an open relationship with clients and providers.</li>
+				<li>Various opportunities for physicians working as independent contractors.</li>
+				<li>Catering to physicians’ needs based on schedule, location, specific skillsets and more.</li>
+				<li>Personalized customer service for seamless transitions into new opportunities.</li>
+				<li>Quick and efficient management of facility staffing needs.</li>
+				<li>Placing the right doctors in the right place just when they are needed most.</li>
 			</ul>
-			<a href="#" class="link">Click Here <i class="fa fa-caret-right"></i></a>
 		</div>
 	</div>
-	<div class="top">
+
+	<!-- Content Section -->
+
+	<div class="row">
+		<div class="col-1-2 min-height grey-lt pad-lg mob-order2">
+			<h2>Physicians Seeking a New Opportunity Without a Long-Term Commitment? </h2>
+			<p>We offer you the a chance at a fresh start and we take care of all the fine print, so you can focus on the task at hand. Professional liability, travel costs and lodging are provided at no expense to you.</p>
+			<a href="#" class="link">Apply Now <i class="fa fa-caret-right"></i></a>
+		</div>
+		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02 mob-order1"></div>
+	</div>
+
+	<!-- Content Section -->
+
+	<div class="row">
+		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02"></div>
+		<div class="col-1-2 min-height grey-lt pad-lg">
+			<h2>Facilities Seeking Physicians for Holidays, Night Shifts, Weekends or All of the Above?</h2>
+			<p>When you do not have the proper staffing, we have the solutions you need.</p>
+			<a href="#" class="link">Apply Now <i class="fa fa-caret-right"></i></a>
+		</div>
+	</div>
+
+	<!-- Top Arrow -->
+
+	<div class="top-arrow">
 		<i class="fa fa-chevron-circle-up fa-2x"></i>
 	</div>
 </div>	
