made a lot of progress ;)

--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Docs United</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 
 <div class="grid">
-	<header></header>
+	<header>
+		<div class="row navbar">
+			<div class="col-1-5">
+				<img src="img/logo.png" class="logo">
+				<i class="fa fa-bars fa-2x"></i>
+			</div>
+			<div class="col-4-5 col-flex-row">
+				<a href="#" class="link">Home</a>
+				<a href="#" class="link">Facilities</a>
+				<a href="#" class="link">Providers</a>
+				<a href="#" class="link">Contact Us</a>
+				<a href="#" class="link">Members</a>
+			</div>
+		</div>
+	</header>
 
 	<!-- Billboard -->
 
@@ -22,7 +36,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-1-2 grey-lt pad-lg mob-order2">
+		<div class="col-1-2 grey-lt pad-lg mob-order2 col-flex-column">
 			<h2>Our Mission</h2>
 			<p>Docs United aims to pair top-quality, highly-skilled medical professionals with facilities and clinics in need of temporary or long-term medical staffing.</p>
 			<p>A physician-owned company, Docs United is trusted by fellow physicians and facilities alike, with our team knowing what matters most from both perspectives. Often staffing within the same facilities in which they practice, Docs United uses a thorough screening process to provide the perfect fit at just the right time.</p>
@@ -45,7 +59,7 @@
 
 	<div class="row">
 		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02"></div>
-		<div class="col-1-2 min-height grey-lt pad-lg">
+		<div class="col-1-2 min-height grey-lt pad-lg col-flex-column">
 			<h2>Why Docs United?</h2>
 			<ul>
 				<li>First-class service and communication in an open relationship with clients and providers.</li>
@@ -61,7 +75,7 @@
 	<!-- Content Section -->
 
 	<div class="row">
-		<div class="col-1-2 min-height grey-lt pad-lg mob-order2">
+		<div class="col-1-2 min-height grey-lt pad-lg mob-order2 col-flex-column">
 			<h2>Physicians Seeking a New Opportunity Without a Long-Term Commitment? </h2>
 			<p>We offer you the a chance at a fresh start and we take care of all the fine print, so you can focus on the task at hand. Professional liability, travel costs and lodging are provided at no expense to you.</p>
 			<a href="#" class="link">Apply Now <i class="fa fa-caret-right"></i></a>
@@ -73,7 +87,7 @@
 
 	<div class="row">
 		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02"></div>
-		<div class="col-1-2 min-height grey-lt pad-lg">
+		<div class="col-1-2 min-height grey-lt pad-lg col-flex-column">
 			<h2>Facilities Seeking Physicians for Holidays, Night Shifts, Weekends or All of the Above?</h2>
 			<p>When you do not have the proper staffing, we have the solutions you need.</p>
 			<a href="#" class="link">Apply Now <i class="fa fa-caret-right"></i></a>
