another big update, navbar flex now

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 <div class="grid">
-	<header>
+	<header class="bg-grey-lt">
 		<div class="row navbar">
-			<div class="col-1-5">
+			<div class="col-1-5 col-flex-row">
 				<img src="img/logo.png" class="logo">
 				<i class="fa fa-bars fa-2x"></i>
 			</div>
@@ -28,38 +28,41 @@
 		</div>
 	</header>
 
+	<!-- Copy Line -->
+
+	<div class="row">
+		<div class="col-1-1 center-block bg-blue-vivid pad-md col-flex-row">
+			<p class="fg-white">Filling the needs of both facilities and physicians with the right fit, in the right place, at the right time.</p>
+		</div>
+	</div>
+
 	<!-- Billboard -->
 
 	<div class="row">
-		<div class="col-1-1 center-block grey-dk pad-md">
-			<p>Filling the needs of both facilities and physicians with the right fit, in the right place, at the right time.</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-1-2 grey-lt pad-lg mob-order2 col-flex-column">
+		<div class="col-1-2 pad-lg mob-order2 col-flex-column">
 			<h2>Our Mission</h2>
 			<p>Docs United aims to pair top-quality, highly-skilled medical professionals with facilities and clinics in need of temporary or long-term medical staffing.</p>
 			<p>A physician-owned company, Docs United is trusted by fellow physicians and facilities alike, with our team knowing what matters most from both perspectives. Often staffing within the same facilities in which they practice, Docs United uses a thorough screening process to provide the perfect fit at just the right time.</p>
 		</div>
-		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home01 mob-order1"></div>
+		<div class="col-1-2 min-height bg-grey-md pad-lg bb-bg bb-home01 mob-order1"></div>
 	</div>
 
 	<!-- Button Section -->
 
 	<div class="row">
-		<div class="col-1-2 center-block pad-md">
-			<a href="#" class="button">Facility Application</a>
+		<div class="col-1-2 center-block pad-md bg-grey-md col-flex-row">
+			<a href="#" class="button bg-blue-vivid">Facility Application</a>
 		</div>
-		<div class="col-1-2 center-block pad-md grey-md">
-			<a href="#" class="button">Physician Application</a>
+		<div class="col-1-2 center-block pad-md bg-grey-md col-flex-row">
+			<a href="#" class="button bg-blue-vivid">Physician Application</a>
 		</div>
 	</div>
 
 	<!-- Content Section -->
 
 	<div class="row">
-		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02"></div>
-		<div class="col-1-2 min-height grey-lt pad-lg col-flex-column">
+		<div class="col-1-2 min-height bg-grey-md pad-lg bb-bg bb-home02"></div>
+		<div class="col-1-2 min-height pad-lg col-flex-column">
 			<h2>Why Docs United?</h2>
 			<ul>
 				<li>First-class service and communication in an open relationship with clients and providers.</li>
@@ -75,19 +78,19 @@
 	<!-- Content Section -->
 
 	<div class="row">
-		<div class="col-1-2 min-height grey-lt pad-lg mob-order2 col-flex-column">
+		<div class="col-1-2 min-height bg-grey-lt pad-lg mob-order2 col-flex-column">
 			<h2>Physicians Seeking a New Opportunity Without a Long-Term Commitment? </h2>
 			<p>We offer you the a chance at a fresh start and we take care of all the fine print, so you can focus on the task at hand. Professional liability, travel costs and lodging are provided at no expense to you.</p>
 			<a href="#" class="link">Apply Now <i class="fa fa-caret-right"></i></a>
 		</div>
-		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02 mob-order1"></div>
+		<div class="col-1-2 min-height bg-grey-md pad-lg bb-bg bb-home02 mob-order1"></div>
 	</div>
 
 	<!-- Content Section -->
 
 	<div class="row">
-		<div class="col-1-2 min-height grey-md pad-lg bb-bg bb-home02"></div>
-		<div class="col-1-2 min-height grey-lt pad-lg col-flex-column">
+		<div class="col-1-2 min-height bg-grey-md pad-lg bb-bg bb-home02"></div>
+		<div class="col-1-2 min-height bg-grey-lt pad-lg col-flex-column">
 			<h2>Facilities Seeking Physicians for Holidays, Night Shifts, Weekends or All of the Above?</h2>
 			<p>When you do not have the proper staffing, we have the solutions you need.</p>
 			<a href="#" class="link">Apply Now <i class="fa fa-caret-right"></i></a>
@@ -99,6 +102,10 @@
 	<div class="top-arrow">
 		<i class="fa fa-chevron-circle-up fa-2x"></i>
 	</div>
+
+	<footer>
+		<p class="disclaimer">&copy; 2016 DocUnited, LLC</p>
+	</footer>
 </div>	
 </body>
 </html>
