taller button section + new building image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<!-- Copy Line -->
 
 	<div class="row">
-		<div class="col-1-1 center-block bg-blue-vivid pad-md col-flex-row">
+		<div class="col-1-1 center-block-sm bg-blue-vivid pad-md col-flex-row">
 			<p class="fg-white">Filling the needs of both facilities and physicians with the right fit, in the right place, at the right time.</p>
 		</div>
 	</div>
@@ -50,10 +50,10 @@
 	<!-- Button Section -->
 
 	<div class="row">
-		<div class="col-1-2 center-block pad-md bg-blue-vivid-lt col-flex-row">
+		<div class="col-1-2 center-block-lg pad-md bg-blue-vivid-lt col-flex-row">
 			<a href="#" class="button bg-blue-vivid">Facility Application</a>
 		</div>
-		<div class="col-1-2 center-block pad-md bg-blue-vivid-ex-lt col-flex-row">
+		<div class="col-1-2 center-block-sm pad-md bg-blue-vivid-ex-lt col-flex-row">
 			<a href="#" class="button bg-blue-vivid">Physician Application</a>
 		</div>
 	</div>
