add js + flex links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<!-- Billboard -->
 
-	<div class="row">
+	<div class="row" id="top-trigger">
 		<div class="col-1-2 pad-lg mob-order2 col-flex-column bb-bg bb-logo-left">
 			<h2>Our Mission</h2>
 			<p>Docs United aims to pair top-quality, highly-skilled medical professionals with facilities and clinics in need of temporary or long-term medical staffing.</p>
@@ -51,10 +51,10 @@
 
 	<div class="row">
 		<div class="col-1-2 center-block-lg pad-md bg-blue-vivid-lt col-flex-row">
-			<a href="#" class="button bg-blue-vivid">Facility Application</a>
+			<a href="#" class="button">Facility Application</a>
 		</div>
 		<div class="col-1-2 center-block-sm pad-md bg-blue-vivid-ex-lt col-flex-row">
-			<a href="#" class="button bg-blue-vivid">Physician Application</a>
+			<a href="#" class="button">Physician Application</a>
 		</div>
 	</div>
 
@@ -106,6 +106,10 @@
 	<footer class="bg-grey-lt">
 		<p class="disclaimer">&copy; 2016 DocsUnited, LLC</p>
 	</footer>
-</div>	
+</div>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="js/jquery.scrollTo.min.js"></script>
+<script src="js/waypoints.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
