shorter mobile images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="col-1-2 center-block-lg pad-md bg-blue-vivid-lt col-flex-row">
 			<a href="#" class="button">Facility Application</a>
 		</div>
-		<div class="col-1-2 center-block-sm pad-md bg-blue-vivid-ex-lt col-flex-row">
+		<div class="col-1-2 center-block-lg pad-md bg-blue-vivid-ex-lt col-flex-row">
 			<a href="#" class="button">Physician Application</a>
 		</div>
 	</div>
