added mobile auto opening links

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 		</div>
 	</header>
 
+	<!-- Mob Links -->
+
+	<div class="row mobile-links bg-grey-lt">
+		<div class="col-1-1">
+			<a href="#" class="link">Home</a>
+			<a href="#" class="link">Facilities</a>
+			<a href="#" class="link">Providers</a>
+			<a href="#" class="link">Contact Us</a>
+			<a href="#" class="link">Members</a>
+		</div>
+	</div>
+
 	<!-- Copy Line -->
 
 	<div class="row">
@@ -42,7 +54,7 @@
 		<div class="col-1-2 pad-lg mob-order2 col-flex-column bb-bg bb-logo-left">
 			<h2>Our Mission</h2>
 			<p>Docs United aims to pair top-quality, highly-skilled medical professionals with facilities and clinics in need of temporary or long-term medical staffing.</p>
-			<p>A physician-owned company, Docs United is trusted by fellow physicians and facilities alike, with our team knowing what matters most from both perspectives. Often staffing within the same facilities in which they practice, Docs United uses a thorough screening process to provide the perfect fit at just the right time.</p>
+			<p>A physician-managed company, Docs United is trusted by fellow physicians and facilities alike, with our team knowing what matters most from both perspectives. Often staffing within the same facilities in which they practice, Docs United uses a thorough screening process to provide the perfect fit at just the right time.</p>
 		</div>
 		<div class="col-1-2 min-height bg-grey-md pad-lg bb-bg bb-home01 mob-order1"></div>
 	</div>
